--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@rainbow-me/rainbowkit": "^1.0.11",
+    "@wagmi/core": "^1.4.2",
+    "axios": "^1.5.0",
+    "flutterwave-react-v3": "^1.3.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
