--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@rainbow-me/rainbowkit": "^1.0.11",
     "@wagmi/core": "^1.4.2",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "flutterwave-react-v3": "^1.3.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "viem": "~1.10.7",
     "wagmi": "~1.4.1"
