--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "sharp": "^0.32.6",
     "viem": "~1.10.7",
     "wagmi": "~1.4.1"
   },
