--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@wagmi/core": "^1.4.2",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "ethers": "^6.7.1",
     "flutterwave-react-v3": "^1.3.0",
     "next": "^13.4.19",
     "react": "^18.2.0",
